# CarbonSense

./: .env.example  .gitignore  CONTRIBUTING.md  FEATURES_OVERVIEW.md  FIXES_COMPLETED.md  LICENSE  QUICKSTART.md  README.md  carbonsense_manus_prompt.md  docker-compose.yml  start-demo.sh
backend/: Dockerfile  main.py  requirements.txt
backend/app/auth/: __init__.py  auth.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  database.py  models.py
backend/app/schemas/: auth.py  carbon.py
backend/app/services/: correlation.py  green_score.py  recommendations.py  safety.py
backend/app/utils/: seed_data.py
backend/tests/: conftest.py  test_auth.py
dashboard/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.tsx  SafetyTab.tsx  TradeoffTab.tsx  api.ts
data/: demo_data_generator.py  iot_simulator.py  satellite_integration.py
docs/: COMPETITIVE_ANALYSIS.md  DEMOGRAPHIC_CALCULATIONS.md  EMISSION_FACTORS_VALIDATION.md  LEARNING_FROM_FAILURES.md  MARKETING_MATERIALS.md  PROJECT_STRUCTURE.md  SOCIAL_FEATURES.md
ml/: impact_predictor.py  recommendation_engine.py
mobile/: App.tsx  package.json  tsconfig.json
mobile/src/screens/: CarbonTrackerScreen.tsx  ChallengesScreen.tsx  DashboardScreen.tsx  FriendsScreen.tsx  ImpactScreen.tsx  NotificationsScreen.tsx  ProfileScreen.tsx  SocialFeedScreen.tsx
mobile/src/store/: store.ts
sdk/: pyproject.toml
sdk/carbonsense/: __init__.py  monitor.py
web/: Dockerfile  index.html  next.config.js  package.json  tailwind.config.js
web/src/app/: globals.css  (+3 more)
(+24 files in other folders)
